Update README.md, add nginx instructions